--- a/VOIP/users.conf
+++ b/VOIP/users.conf
@@ -1,8 +1,8 @@
-[default_template](!)              ; Nom du template . Le « ! » indique qu’il s’agit d’un Template
-type=friend                        ; Type d'objet SIP (friend = utilisateur)
-host=dynamic                       ; L’utilisateur n’est pas associé à une IP fixe
-dtmfmode=rfc2833                   ; Mode DTMF
-disallow=all                       ; Interdit tous les codecs
+[default_template](!)              
+type=friend                        
+host=dynamic                       
+dtmfmode=rfc2833                  
+disallow=all                       
 allow=ulaw
 allow=alaw
 allow=speex
@@ -10,23 +10,23 @@ allow=gsm
 allow=h261
 allow=h263
 allow=h263p
-allow=h264                      ; Autorise le codec ulaw
-nat=yes                          ; L'utilisateur ne se trouve pas derrière un NAT
-hassip=yes                         ; L’utilisateur possède un compte SIP
-hasiax=no                          ; L’utilisateur ne possède pas de compte iax
-callwaiting = yes                  ; L’utilisateur peut mettre des appels en attente
-transfer=yes                       ; L’utilisateur peut transférer des appels
-canpark=yes                        ; L’utilisateur peut mettre des appels dans le parking
-hasvoicemail=yes                   ; L’utilisateur possède une boîte vocale
+allow=h264                      
+nat=yes                          
+hassip=yes                         
+hasiax=no                         
+callwaiting = yes                  
+transfer=yes                       
+canpark=yes                        
+hasvoicemail=yes                   
 qualify=yes
 threewaycalling=yes
 
-[100](default_template)        ; Numéro SIP et Template utilisé
-fullname = Directeur           ; Nom complet de l'utilisateur us
-username = directeur           ; Nom d'utilisateur
-secret=password                ; Mot de passe
-mailbox = 100                  ; N° de boîte vocale
-context=Direction                 ; Contexte de l’utilisateur
+[100](default_template)        
+fullname = Directeur          
+username = directeur           
+secret=password               
+mailbox = 100                  
+context=Direction                 
 
 [105](default_template)
 fullname = Secretaire
@@ -68,9 +68,9 @@ secret = password
 mailbox = 211
 context = Administration
 
-[300](default_template)        ; Numéro SIP et Template utilisé
-fullname = Atelier             ; Nom complet de l'utilisateur
-username = atelier             ; Nom d'utilisateur
-secret=password                ; Mot de passe
-mailbox = 200                  ; N° de boîte vocale
-context=Atelier                 ; Contexte de l’utilisateur
+[300](default_template)       
+fullname = Atelier             
+username = atelier            
+secret=password                
+mailbox = 200                  
+context=Atelier                
