--- a/VOIP/voicemail.conf
+++ b/VOIP/voicemail.conf
@@ -1,11 +1,10 @@
 [general]
-maxmsg=100          ; Nombre max de message sur la Voicemail. Si elle est pleine, il n'est pas possible de rajouter des messages
-maxsecs=0           ; Durée max d'un message. "0" = pas de limite
-minsecs=2           ; Durée minimum d'un message
-maxlogins=3         ; Nombre max d'erreur de login
-review=no           ; Permet à l'appelant de réécouter son message avant de le transmettre à la Voicmail. Accessible en terminant le message par #
-saycid=no           ; Dicte le numéro de l'appelant avant de jouer le message qu'il a laissé
-
+maxmsg=100          
+maxsecs=0           
+minsecs=2           
+maxlogins=3         
+review=no          
+saycid=no           
 [Direction_vm]
 100 => 1234, Direction
 105 => 1234, Secretaire
